// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`elements/content-sidebar/Skills/Faces/Faces should correctly render edit button when editable 1`] = `
<LoadingIndicatorWrapper
  className="be-faces"
  isLoading={false}
>
  <Tooltip
    constrainToScrollParent={false}
    constrainToWindow={true}
    isDisabled={false}
    position="top-center"
    text={
      <FormattedMessage
        defaultMessage="Edit"
        id="be.editLabel"
      />
    }
    theme="default"
  >
    <PlainButton
      className="be-face-edit"
      data-resin-target="skill-faceedit"
      onClick={[Function]}
      type="button"
    >
      <IconEdit />
    </PlainButton>
  </Tooltip>
  <Face
    face={
      {
        "text": "foo",
      }
    }
    key="0"
    onDelete={[Function]}
    onSelect={[Function]}
  />
  <Face
    face={
      {
        "text": "bar",
      }
    }
    key="1"
    onDelete={[Function]}
    onSelect={[Function]}
  />
</LoadingIndicatorWrapper>
`;

exports[`elements/content-sidebar/Skills/Faces/Faces should correctly render error when no faces 1`] = `
<LoadingIndicatorWrapper
  className="be-faces"
  isLoading={false}
>
  <FormattedMessage
    defaultMessage="We’re sorry, no skills information was found."
    id="be.skillNoInfoFoundError"
  />
</LoadingIndicatorWrapper>
`;

exports[`elements/content-sidebar/Skills/Faces/Faces should correctly render faces when not editable 1`] = `
<LoadingIndicatorWrapper
  className="be-faces"
  isLoading={false}
>
  <Face
    face={
      {
        "text": "foo",
      }
    }
    key="0"
    onDelete={[Function]}
    onSelect={[Function]}
  />
  <Face
    face={
      {
        "text": "bar",
      }
    }
    key="1"
    onDelete={[Function]}
    onSelect={[Function]}
  />
</LoadingIndicatorWrapper>
`;

exports[`elements/content-sidebar/Skills/Faces/Faces should correctly render faces without removed faces 1`] = `
<LoadingIndicatorWrapper
  className="be-faces"
  isLoading={false}
>
  <Face
    face={
      {
        "text": "foo",
      }
    }
    key="0"
    onDelete={[Function]}
    onSelect={[Function]}
  />
</LoadingIndicatorWrapper>
`;

exports[`elements/content-sidebar/Skills/Faces/Faces should correctly render save and cancel button when editable and editing 1`] = `
<LoadingIndicatorWrapper
  className="be-faces"
  isLoading={false}
>
  <Tooltip
    constrainToScrollParent={false}
    constrainToWindow={true}
    isDisabled={false}
    position="top-center"
    text={
      <FormattedMessage
        defaultMessage="Edit"
        id="be.editLabel"
      />
    }
    theme="default"
  >
    <PlainButton
      className="be-face-edit be-faces-is-editing"
      data-resin-target="skill-faceedit"
      onClick={[Function]}
      type="button"
    >
      <IconEdit />
    </PlainButton>
  </Tooltip>
  <Face
    face={
      {
        "text": "foo",
      }
    }
    isEditing={true}
    key="0"
    onDelete={[Function]}
    onSelect={[Function]}
  />
  <Face
    face={
      {
        "text": "bar",
      }
    }
    isEditing={true}
    key="1"
    onDelete={[Function]}
    onSelect={[Function]}
  />
  <div
    className="be-faces-buttons"
  >
    <Button
      className=""
      data-resin-target="skill-faceeditcancel"
      isLoading={false}
      onClick={[Function]}
      showRadar={false}
      type="button"
    >
      <FormattedMessage
        defaultMessage="Cancel"
        id="be.cancel"
      />
    </Button>
    <PrimaryButton
      data-resin-target="skill-faceeditsave"
      onClick={[Function]}
      type="button"
    >
      <FormattedMessage
        defaultMessage="Save"
        id="be.save"
      />
    </PrimaryButton>
  </div>
</LoadingIndicatorWrapper>
`;

exports[`elements/content-sidebar/Skills/Faces/Faces should correctly render time line when face is selected 1`] = `
<LoadingIndicatorWrapper
  className="be-faces"
  isLoading={false}
>
  <Face
    face={
      {
        "appears": [
          {
            "start": 1,
          },
        ],
        "text": "foo",
      }
    }
    key="0"
    onDelete={[Function]}
    onSelect={[Function]}
    selected={
      {
        "appears": [
          {
            "start": 1,
          },
        ],
        "text": "bar",
      }
    }
  />
  <Face
    face={
      {
        "appears": [
          {
            "start": 1,
          },
        ],
        "text": "bar",
      }
    }
    key="1"
    onDelete={[Function]}
    onSelect={[Function]}
    selected={
      {
        "appears": [
          {
            "start": 1,
          },
        ],
        "text": "bar",
      }
    }
  />
  <Timeline
    duration={100}
    interactionTarget="skill-facetimeslice"
    timeslices={
      [
        {
          "start": 1,
        },
      ]
    }
  />
</LoadingIndicatorWrapper>
`;

exports[`elements/content-sidebar/Skills/Faces/Faces should correctly render when isLoading is true 1`] = `
<LoadingIndicatorWrapper
  className="be-faces"
  isLoading={true}
>
  <Face
    face={
      {
        "text": "foo",
      }
    }
    key="0"
    onDelete={[Function]}
    onSelect={[Function]}
  />
  <Face
    face={
      {
        "text": "bar",
      }
    }
    key="1"
    onDelete={[Function]}
    onSelect={[Function]}
  />
</LoadingIndicatorWrapper>
`;
